tests/sksl/errors/LayoutRepeatedQualifiers.glsl
### Compilation failed:

error: 6: 'key' is not a valid layout qualifier
error: 16: 'when' is not a valid layout qualifier
error: 16: expected ',', but found '='
error: 16: no type named 'one'
4 errors
